fixed checkout overflow wrap of shipping info

--- a/react-app/src/components/CheckOutPage/checkout.css
+++ b/react-app/src/components/CheckOutPage/checkout.css
@@ -41,7 +41,8 @@
 
 .order-review {
     margin: 30px 0px 0px 100px;
-
+    inline-size: 155px;
+    overflow-wrap: break-word;
 }
 
 .order-review-line, .order-review-calc-summary {
